# sp1-zephyrbin

./: CMakeLists.txt  EmmcDriver.cpp  EmmcDriver.hpp  README.md  main.cpp  prj.conf
tools/: make_test_album.py  upload.py
uploader/: CMakeLists.txt  main.cpp  prj.conf
